@@ -1,5 +1,5 @@
 /* 
-  DccNiTghtmare: a satiric post-apocalyptical RPG.
+  DccNiTghtmare: a satirical post-apocalyptical RPG.
   Copyright (C) 2005-2009 DNTeam <dnt@dnteam.org>
  
   This file is part of DccNiTghtmare.
@@ -63,7 +63,7 @@ bool collision::verifySquare(GLfloat min[3], GLfloat max[3], Square* quad,
    GLfloat max2[3];
 
    Square* proxima = quad;
-   if(proxima->flags != SQUARE_CAN_WALK)
+   if(!(proxima->flags & SQUARE_CAN_WALK))
    {
      return(false);
    }
