@@ -1,6 +1,7 @@
 ================================================
 |                Version 0.6                   |
 ================================================
+- Map reflexion is now enabled per square;
 
 ================================================
 |               Version 0.5.1                  |
